force-app/main/default/objects/Zip_Code__c/Zip_Code__c.object-meta.xml
<CustomObject>
    <label>Zip Code</label>
    <nameField>
        <displayFormat>Zip-{00000}</displayFormat>
        <label>Zip Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>