force-app/main/default/objects/Zip_Code__c/fields/Accessory_Division__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Division__c</fullName>
    <label>Accessory Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INTL</fullName>
            </value>
            <value>
                <fullName>WIRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>