force-app/main/default/objects/Zip_Code__c/fields/Accessory_Region__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Region__c</fullName>
    <label>Accessory Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCT</fullName>
            </value>
            <value>
                <fullName>CMW</fullName>
            </value>
            <value>
                <fullName>CNE</fullName>
            </value>
            <value>
                <fullName>CNW</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>CSW</fullName>
            </value>
            <value>
                <fullName>HSEC</fullName>
            </value>
            <value>
                <fullName>HSEW</fullName>
            </value>
            <value>
                <fullName>WIMW</fullName>
            </value>
            <value>
                <fullName>WINE</fullName>
            </value>
            <value>
                <fullName>WINW</fullName>
            </value>
            <value>
                <fullName>WISC</fullName>
            </value>
            <value>
                <fullName>WISE</fullName>
            </value>
            <value>
                <fullName>WISW</fullName>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>DTVLATA</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>MEX-CA</fullName>
            </value>
            <value>
                <fullName>OZ</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>S-Cone</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>WE</fullName>
            </value>
            <value>
                <fullName>NTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>