force-app/main/default/objects/Zip_Code__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Zip Codes</relationshipLabel>
    <relationshipName>Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>