force-app/main/default/objects/Zip_Code__c/fields/ATT_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>ATT_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATT Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_Codes1</relationshipName>
    <type>Lookup</type>
</CustomField>