force-app/main/default/objects/Zip_Code__c/fields/BroadBand_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>BroadBand_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BroadBand Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>