force-app/main/default/objects/Zip_Code__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Program Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOM</fullName>
            </value>
            <value>
                <fullName>KEY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>