force-app/main/default/objects/Zip_Code__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>