force-app/main/default/objects/Zip_Code__c/fields/IF_Outside_Territory_Manager__c.field-meta.xml
<CustomField>
    <fullName>IF_Outside_Territory_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IF Regional Accessory Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_Codes2</relationshipName>
    <type>Lookup</type>
</CustomField>