force-app/main/default/objects/Zip_Code__c/fields/IF_Regional_Email__c.field-meta.xml
<CustomField>
    <fullName>IF_Regional_Email__c</fullName>
    <label>IF Regional Email</label>
    <type>Email</type>
</CustomField>