force-app/main/default/objects/Zip_Code__c/fields/ISG_Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>ISG_Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISG Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_Codes4</relationshipName>
    <type>Lookup</type>
</CustomField>