force-app/main/default/objects/Zip_Code__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Program Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEN</fullName>
            </value>
            <value>
                <fullName>ESR</fullName>
            </value>
            <value>
                <fullName>WES</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>