force-app/main/default/objects/Zip_Code__c/fields/Regional_Commercial_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Commercial_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Commercial Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_Codes3</relationshipName>
    <type>Lookup</type>
</CustomField>