force-app/main/default/objects/Zip_Code__c/fields/Territory_del__c.field-meta.xml
<CustomField>
    <fullName>Territory_del__c</fullName>
    <label>Program Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GLK</fullName>
            </value>
            <value>
                <fullName>GLF</fullName>
            </value>
            <value>
                <fullName>HRT</fullName>
            </value>
            <value>
                <fullName>LAN</fullName>
            </value>
            <value>
                <fullName>PNW</fullName>
            </value>
            <value>
                <fullName>HSE</fullName>
            </value>
            <value>
                <fullName>GTP</fullName>
            </value>
            <value>
                <fullName>FGA</fullName>
            </value>
            <value>
                <fullName>PVN</fullName>
            </value>
            <value>
                <fullName>TXO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>